--- a/.github/workflows/runnable_cxx.yml
+++ b/.github/workflows/runnable_cxx.yml
@@ -251,9 +251,11 @@ jobs:
       if: matrix.compiler == 'g++'
       run: |
         # Workaround bug in Github actions
-        curl https://cli-assets.heroku.com/apt/release.key | sudo apt-key add -
+        wget https://cli-assets.heroku.com/apt/release.key
+        sudo apt-key add release.key
         # Make sure we have the essentials
         sudo apt-get update
+        sudo apt-get install ca-certificates
         sudo apt-get install build-essential software-properties-common -y
         # This ppa provides multiple versions of g++
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
